# azure-mlops

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  env_example  pyproject.toml
infrastructure/: create.sh  create.yaml  delete.sh  delete.yaml  main.tf  register_azure.sh  variables.tf
infrastructure/configs/: Experiments_backend.conf
infrastructure/modules/ml/: main.tf
infrastructure/variables/: Experiments.tfvars
notebooks/: init.ipynb  local.ipynb  pipeline.ipynb
src/stockpredict/: settings.py
src/stockpredict/deployment/: components.py  environments.py  main.py  pipelines.py
src/stockpredict/docker-contexts/default/: Dockerfile  requirements.txt
src/stockpredict/etl/: cleaner.py  preprocess.py
src/stockpredict/fetcher/: api_client.py  core.py  main.py
src/stockpredict/inference/: data_fetcher.py  stock.py
src/stockpredict/model/: network.py
src/stockpredict/train/: dataset.py  main.py
src/stockpredict/util/: dto.py  helpers.py
